Add Caching Solver